--- a/SeleniumWebDriverExampleProjectJava/pom.xml
+++ b/SeleniumWebDriverExampleProjectJava/pom.xml
@@ -57,5 +57,16 @@
         <artifactId>cucumber-picocontainer</artifactId>
         <version>1.2.5</version>
     </dependency>
+    <dependency>
+    	<groupId>com.sikulix</groupId>
+    	<artifactId>sikulixapi</artifactId>
+    	<version>1.1.2</version>
+    	<exclusions>
+  			<exclusion>
+   				<groupId>com.github.vidstige</groupId>
+   				<artifactId>jadb</artifactId>
+  			</exclusion>
+ 		</exclusions>
+	</dependency>
   </dependencies>
 </project>
